# gemini_cli_wrapper

./: Makefile  README.md  main.py  pyproject.toml
gemini_cli_wrapper/: __about__.py  __init__.py  __main__.py  main.py
